--- a/src/files/login_page/styles.css
+++ b/src/files/login_page/styles.css
@@ -16,7 +16,33 @@
   position:absolute;
   z-index:0;
 }
-#u74_img {
+#u88 {
+  position:absolute;
+  left:0px;
+  top:0px;
+}
+#u88_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  width:1440px;
+  height:938px;
+  background-image:none;
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u88_state0_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u89_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -24,7 +50,7 @@
   width:1440px;
   height:938px;
 }
-#u74 {
+#u89 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -34,20 +60,20 @@
   display:flex;
   opacity:0.36;
 }
-#u74 .text {
+#u89 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u74_text {
+#u89_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u75 {
+#u90 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -55,7 +81,7 @@
   width:0px;
   height:0px;
 }
-#u76_div {
+#u91_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -74,7 +100,7 @@
   box-shadow:none;
   color:#000000;
 }
-#u76 {
+#u91 {
   border-width:0px;
   position:absolute;
   left:438px;
@@ -84,20 +110,20 @@
   display:flex;
   color:#000000;
 }
-#u76 .text {
+#u91 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u76_text {
+#u91_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u77_div {
+#u92_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -115,7 +141,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u77 {
+#u92 {
   border-width:0px;
   position:absolute;
   left:497px;
@@ -127,20 +153,20 @@
   font-weight:700;
   font-style:normal;
 }
-#u77 .text {
+#u92 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u77_text {
+#u92_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u78_div {
+#u93_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -161,7 +187,7 @@
   color:#000000;
   text-align:center;
 }
-#u78 {
+#u93 {
   border-width:0px;
   position:absolute;
   left:447px;
@@ -176,19 +202,19 @@
   color:#000000;
   text-align:center;
 }
-#u78 .text {
+#u93 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u78_text {
+#u93_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u79_div {
+#u94_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -207,7 +233,7 @@
   box-shadow:none;
   color:#000000;
 }
-#u79 {
+#u94 {
   border-width:0px;
   position:absolute;
   left:774px;
@@ -217,14 +243,14 @@
   display:flex;
   color:#000000;
 }
-#u79 .text {
+#u94 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u79_div.mouseOver {
+#u94_div.mouseOver {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -243,9 +269,9 @@
   box-shadow:none;
   color:#000000;
 }
-#u79.mouseOver {
+#u94.mouseOver {
 }
-#u79_div.mouseDown {
+#u94_div.mouseDown {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -264,9 +290,9 @@
   box-shadow:none;
   color:#000000;
 }
-#u79.mouseDown {
+#u94.mouseDown {
 }
-#u79_div.selected {
+#u94_div.selected {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -285,9 +311,9 @@
   box-shadow:none;
   color:#000000;
 }
-#u79.selected {
+#u94.selected {
 }
-#u79_div.mouseOver.mouseDown {
+#u94_div.mouseOver.mouseDown {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -306,9 +332,9 @@
   box-shadow:none;
   color:#000000;
 }
-#u79.mouseOver.mouseDown {
+#u94.mouseOver.mouseDown {
 }
-#u79_div.mouseOver.selected {
+#u94_div.mouseOver.selected {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -327,9 +353,9 @@
   box-shadow:none;
   color:#000000;
 }
-#u79.mouseOver.selected {
+#u94.mouseOver.selected {
 }
-#u79_div.mouseDown.selected {
+#u94_div.mouseDown.selected {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -348,9 +374,9 @@
   box-shadow:none;
   color:#000000;
 }
-#u79.mouseDown.selected {
+#u94.mouseDown.selected {
 }
-#u79_div.mouseOver.mouseDown.selected {
+#u94_div.mouseOver.mouseDown.selected {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -369,14 +395,14 @@
   box-shadow:none;
   color:#000000;
 }
-#u79.mouseOver.mouseDown.selected {
+#u94.mouseOver.mouseDown.selected {
 }
-#u79_text {
+#u94_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u80_div {
+#u95_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -392,7 +418,7 @@
   box-shadow:none;
   font-size:16px;
 }
-#u80 {
+#u95 {
   border-width:0px;
   position:absolute;
   left:460px;
@@ -402,20 +428,20 @@
   display:flex;
   font-size:16px;
 }
-#u80 .text {
+#u95 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u80_text {
+#u95_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u81_input {
+#u96_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -434,7 +460,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u81_input.hint {
+#u96_input.hint {
   position:absolute;
   left:0px;
   top:0px;
@@ -453,7 +479,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u81_input.disabled {
+#u96_input.disabled {
   position:absolute;
   left:0px;
   top:0px;
@@ -472,7 +498,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u81_input.hint.disabled {
+#u96_input.hint.disabled {
   position:absolute;
   left:0px;
   top:0px;
@@ -491,7 +517,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u81_div {
+#u96_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -509,7 +535,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u81 {
+#u96 {
   border-width:0px;
   position:absolute;
   left:460px;
@@ -518,14 +544,14 @@
   height:25px;
   display:flex;
 }
-#u81 .text {
+#u96 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u81_div.hint {
+#u96_div.hint {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -543,9 +569,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u81.hint {
+#u96.hint {
 }
-#u81_div.disabled {
+#u96_div.disabled {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -563,9 +589,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u81.disabled {
+#u96.disabled {
 }
-#u81_div.hint.disabled {
+#u96_div.hint.disabled {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -583,9 +609,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u81.hint.disabled {
+#u96.hint.disabled {
 }
-#u82_input {
+#u97_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -604,7 +630,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u82_input.hint {
+#u97_input.hint {
   position:absolute;
   left:0px;
   top:0px;
@@ -623,7 +649,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u82_input.disabled {
+#u97_input.disabled {
   position:absolute;
   left:0px;
   top:0px;
@@ -642,7 +668,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u82_input.hint.disabled {
+#u97_input.hint.disabled {
   position:absolute;
   left:0px;
   top:0px;
@@ -661,7 +687,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u82_div {
+#u97_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -679,7 +705,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u82 {
+#u97 {
   border-width:0px;
   position:absolute;
   left:460px;
@@ -688,14 +714,14 @@
   height:25px;
   display:flex;
 }
-#u82 .text {
+#u97 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u82_div.hint {
+#u97_div.hint {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -713,9 +739,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u82.hint {
+#u97.hint {
 }
-#u82_div.disabled {
+#u97_div.disabled {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -733,9 +759,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u82.disabled {
+#u97.disabled {
 }
-#u82_div.hint.disabled {
+#u97_div.hint.disabled {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -753,9 +779,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u82.hint.disabled {
+#u97.hint.disabled {
 }
-#u83_div {
+#u98_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -773,7 +799,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u83 {
+#u98 {
   border-width:0px;
   position:absolute;
   left:460px;
@@ -785,19 +811,19 @@
   font-weight:700;
   font-style:normal;
 }
-#u83 .text {
+#u98 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u83_text {
+#u98_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u84_div {
+#u99_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -815,7 +841,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u84 {
+#u99 {
   border-width:0px;
   position:absolute;
   left:460px;
@@ -827,15 +853,91 @@
   font-weight:700;
   font-style:normal;
 }
-#u84 .text {
+#u99 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u84_text {
+#u99_text {
   border-width:0px;
   white-space:nowrap;
+  text-transform:none;
+}
+#u100_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:174px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  color:#D9001B;
+}
+#u100 {
+  border-width:0px;
+  position:absolute;
+  left:523px;
+  top:327px;
+  width:174px;
+  height:15px;
+  display:flex;
+  color:#D9001B;
+}
+#u100 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u100_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+#u101_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:174px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  color:#D9001B;
+}
+#u101 {
+  border-width:0px;
+  position:absolute;
+  left:568px;
+  top:409px;
+  width:174px;
+  height:15px;
+  display:flex;
+  color:#D9001B;
+}
+#u101 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u101_text {
+  border-width:0px;
+  word-wrap:break-word;
   text-transform:none;
 }
