--- a/src/data/styles.css
+++ b/src/data/styles.css
@@ -21,6 +21,10 @@
 .placeholder {
 }
 .button {
+  font-family:"Arial Negreta", "Arial Normal", "Arial", sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
 }
 .primary_button {
   color:#FFFFFF;
